--- a/vscode_write_html.html
+++ b/vscode_write_html.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="1.css">
+    <style>
+        p
+        {
+            color: yellow;
+        }
+    </style>
 </head>
 <body>
     <h1 style="color:green;">this is a h1</h1>
