--- a/vscode_write_html.html
+++ b/vscode_write_html.html
@@ -7,9 +7,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="1.css">
     <style>
+        body
+        {
+            background-image: url('F77.png');
+            background-repeat:no-repeat;
+            background-position: right bottom;
+        }
         p
         {
-            color: yellow;
+            color: blue;
+            
         }
     </style>
 </head>
