change body background

--- a/vscode_write_html.html
+++ b/vscode_write_html.html
@@ -11,7 +11,7 @@
         {
             background-image: url('F77.png');
             background-repeat:no-repeat;
-            background-position: right bottom;
+            background-position: center top;
         }
         p
         {
